--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 		<title> 
 			Stay For A Day
 		</title>
-		<link rel="stylesheet" href="Aula 27-05.css" type="text/css">
+		<link rel="stylesheet" href="Style.css" type="text/css">
 	</head>
 	<body>
 		<header>
