--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
 	<body>
 		<header>
 			<h1 id="Titulo"> CEEMTI Baixo Guandu </h1>
-			<a href="Pagina DG 13-05-2024.html"> DG </a>
-			<a href="Programação para web design.html"> PWD </a>
+			<a href=""> A </a>
+			<a href=""> B </a>
 			<img src="imagem/Logo Escola.png" alt="Logo da Escola"> 
 
 		</header>
