--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
 	<body>
 		<header>
 			<h1 id="Titulo"> CEEMTI Baixo Guandu </h1>
-			<a href=""> A </a>
-			<a href=""> B </a>
+			<a href="main"> Jogue Agora </a>
+			<a href="GDD"> Ler Mais </a>
 			<img src="imagem/Logo Escola.png" alt="Logo da Escola"> 
 
 		</header>
