--- a/home.html
+++ b/home.html
@@ -11,13 +11,12 @@
 	<body>
 		<header>
 			<h1 id="Titulo"> CEEMTI Baixo Guandu </h1>
-			<a href="main"> Jogue Agora </a>
-			
+			<a href="#Jogo"> Jogue Agora </a>
 			<a href="GDD"> Ler Mais </a>
 			<img src="imagem/Logo Escola.png" alt="Logo da Escola"> 
 
 		</header>
-		<main>
+		<main id="Jogo">
 			<iframe src="https://scratch.mit.edu/projects/1092921828/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 		</main>
 		<footer>
