--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<h1 id="Titulo"> CEEMTI Baixo Guandu </h1>
+			<h1 id="Titulo"> Este é o site do jogo Stay For A Day ( Não oficial ) </h1>
 			<a href="#Jogo"> Jogue Agora </a>
 			<a href="GDD"> Ler Mais </a>
 			<img src="imagem/Logo Escola.png" alt="Logo da Escola"> 
